examples/corpus/github/official-rewrite-from-docs.yaml
# Source: https://github.com/kubernetes/ingress-nginx/tree/main/docs/examples/rewrite
# (example is documented in README; captured as a GateShift corpus fixture)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rewrite
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: rewrite.bar.com
      http:
        paths:
          - path: /something(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: http-svc
                port:
                  number: 80
